# churnguard-mlops

./: .pre-commit-config.yaml  README.md
.github/workflows/: ci.yml  release.yml
churnguard/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.trainer  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
churnguard/notebook/: exploration.ipynb
churnguard/requirements/: api.txt  base.txt  dev.txt  ml.txt
churnguard/src/api/: model_loader.py  schemas.py  security.py
churnguard/src/api/routers/: __init__.py  health.py  inference.py
churnguard/src/scripts/: download_data.py  evaluate.py  load_data.py  register_model.py  train.py
churnguard/tests/: conftest.py  test_api.py  test_data.py  test_train.py
k3s/: deploy.sh  namespace.yaml
k3s/api/: deployment.yaml  ingress.yaml  secret.yaml  service.yaml
k3s/mlflow/: deployment.yaml  pvc.yaml  service.yaml
k3s/trainer/: job.yaml
