[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "churnguard"
version = "1.0.0"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
addopts = "--cov=src --cov-fail-under=70 --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
omit = [
    "src/scripts/__init__.py",
    "src/api/__init__.py",
    "src/__init__.py",
    "src/scripts/register_model.py",
]

[tool.coverage.report]
show_missing = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "black>=23.3",
    "ruff>=0.4",
    "mypy>=1.8",
    "httpx",
    "jupyter>=1.0",
    "pre-commit>=3.0",
]
